@@ -200,3 +200,9 @@ I made quite a few cosmetic modifications (comments style to document function,
  remove some useless code, ...)
 
 I push noosfere DB to version 1.0.0
+
+Repaired id_from_url (seems that some url's contain 'NumLivre=' instead of 'numlivre=')...
+the 'good' fact is that one can access a volume using either:
+https://www.noosfere.org/livres/niourf.asp?NumLivre=2146610758 or
+https://www.noosfere.org/livres/niourf.asp?numlivre=2146610758
+
